# DeepResearch

./: README.md  pyproject.toml
examples/: basic_research.py
src/deepresearch/: __init__.py  main.py
src/deepresearch/agents/: base.py  research.py
src/deepresearch/config/: settings.py
src/deepresearch/core/: flow.py  memory.py
src/deepresearch/prompts/: research.py
src/deepresearch/tools/: base.py  search.py
src/deepresearch/utils/: logger.py
tests/: test_basic.py
